--- a/static/c/index.html
+++ b/static/c/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,6 +19,9 @@
             text-align: center;
             background: linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);
             color: #fff;
+        }
+        body[dir="rtl"] {
+            font-family: 'Segoe UI', Tahoma, sans-serif;
         }
         .container {
             max-width: 400px;
@@ -96,6 +99,9 @@
             margin-bottom: 24px;
             text-align: left;
         }
+        body[dir="rtl"] .contact-preview {
+            text-align: right;
+        }
         .contact-name {
             font-size: 18px;
             font-weight: 600;
@@ -106,13 +112,71 @@
             color: #666;
             margin-top: 4px;
         }
+        .lang-switch {
+            position: absolute;
+            top: 16px;
+            right: 16px;
+            font-size: 14px;
+        }
+        body[dir="rtl"] .lang-switch {
+            right: auto;
+            left: 16px;
+        }
+        .lang-switch a {
+            color: #666;
+            text-decoration: none;
+        }
+        .lang-switch a:hover {
+            color: #fff;
+        }
     </style>
     <script>
+        // Localization strings
+        const i18n = {
+            en: {
+                opening: 'Opening in Mycel...',
+                redirecting: 'Redirecting to the app',
+                notInstalled: 'Mycel not installed?',
+                downloadPrompt: 'Download the app to import this contact and join the mesh network.',
+                install: 'Install Mycel',
+                tryAgain: 'Try opening again',
+                afterInstall: 'After installing, come back and tap this link again to import the contact.',
+                unknownContact: 'Unknown Contact',
+                installUrl: '/mycel-docs/getting-started/install/'
+            },
+            fa: {
+                opening: 'در حال باز کردن در Mycel...',
+                redirecting: 'در حال هدایت به برنامه',
+                notInstalled: 'Mycel نصب نیست؟',
+                downloadPrompt: 'برنامه را دانلود کنید تا این مخاطب را وارد کنید و به شبکه مش بپیوندید.',
+                install: 'نصب Mycel',
+                tryAgain: 'تلاش مجدد',
+                afterInstall: 'پس از نصب، برگردید و دوباره روی این لینک بزنید تا مخاطب وارد شود.',
+                unknownContact: 'مخاطب ناشناس',
+                installUrl: '/mycel-docs/fa/getting-started/install/'
+            }
+        };
+
+        // Detect language from URL path or browser
+        function detectLang() {
+            const path = window.location.pathname;
+            if (path.includes('/fa/')) return 'fa';
+            const browserLang = navigator.language || navigator.userLanguage;
+            if (browserLang && browserLang.startsWith('fa')) return 'fa';
+            return 'en';
+        }
+
+        const lang = detectLang();
+        const t = i18n[lang];
+
+        // Set RTL for Farsi
+        if (lang === 'fa') {
+            document.documentElement.lang = 'fa';
+            document.documentElement.dir = 'rtl';
+        }
+
         // Extract pubkey and params from URL
-        // URL format: /c/<pubkey>?n=name&geo=geo&label=label
-        // or: /mycel-docs/c/<pubkey>?...
         const fullPath = window.location.pathname;
-        // Match any base64 characters (standard + URL-safe)
         const pathMatch = fullPath.match(/\/c\/([A-Za-z0-9_\-+=\/]+)/);
         const pubkey = pathMatch ? pathMatch[1] : '';
         const query = window.location.search;
@@ -120,50 +184,57 @@
 
         // Construct mycel:// deep link
         const mycelUrl = pubkey ? ('mycel://contact/' + pubkey + query) : '';
-
-        // Store for retry button
         window.mycelUrl = mycelUrl;
 
-        // Display contact info when DOM is ready
+        // Display content when DOM is ready
         document.addEventListener('DOMContentLoaded', function() {
-            const name = params.get('n') || params.get('full') || 'Unknown Contact';
-            const label = params.get('label');
-            const nameEl = document.getElementById('contact-name');
-            const labelEl = document.getElementById('contact-label');
-            if (nameEl) nameEl.textContent = decodeURIComponent(name);
-            if (labelEl && label) labelEl.textContent = decodeURIComponent(label);
+            // Update text content
+            document.getElementById('loading-title').textContent = t.opening;
+            document.getElementById('loading-subtitle').textContent = t.redirecting;
+            document.getElementById('fallback-title').textContent = t.notInstalled;
+            document.getElementById('fallback-desc').textContent = t.downloadPrompt;
+            document.getElementById('install-btn').textContent = t.install;
+            document.getElementById('install-btn').href = t.installUrl;
+            document.getElementById('retry-btn').textContent = t.tryAgain;
+            document.getElementById('fallback-note').textContent = t.afterInstall;
 
-            // Try to open app using hidden iframe (doesn't break page on failure)
+            // Language switch
+            document.getElementById('lang-switch').innerHTML = lang === 'fa'
+                ? '<a href="?lang=en">English</a>'
+                : '<a href="?lang=fa">فارسی</a>';
+
+            // Contact info
+            const name = params.get('n') || params.get('full') || t.unknownContact;
+            const label = params.get('label');
+            document.getElementById('contact-name').textContent = decodeURIComponent(name);
+            if (label) document.getElementById('contact-label').textContent = decodeURIComponent(label);
+
+            // Try to open app using hidden iframe
             if (mycelUrl) {
                 var iframe = document.createElement('iframe');
                 iframe.style.display = 'none';
                 iframe.src = mycelUrl;
                 document.body.appendChild(iframe);
-
-                // Clean up iframe after attempt
-                setTimeout(function() {
-                    document.body.removeChild(iframe);
-                }, 100);
+                setTimeout(function() { document.body.removeChild(iframe); }, 100);
             }
 
-            // Show fallback after 2s (app either opened or didn't)
+            // Show fallback after 2s
             setTimeout(function() {
-                var loading = document.getElementById('loading');
-                var fallback = document.getElementById('fallback');
-                if (loading) loading.style.display = 'none';
-                if (fallback) fallback.style.display = 'block';
+                document.getElementById('loading').style.display = 'none';
+                document.getElementById('fallback').style.display = 'block';
             }, 2000);
         });
     </script>
 </head>
 <body>
+    <div class="lang-switch" id="lang-switch"></div>
     <div class="container">
         <div class="logo">&#127760;</div>
 
         <div id="loading">
             <div class="spinner"></div>
-            <h1>Opening in Mycel...</h1>
-            <p>Redirecting to the app</p>
+            <h1 id="loading-title">Opening in Mycel...</h1>
+            <p id="loading-subtitle">Redirecting to the app</p>
         </div>
 
         <div id="fallback">
@@ -172,18 +243,18 @@
                 <div class="contact-label" id="contact-label"></div>
             </div>
 
-            <h1>Mycel not installed?</h1>
-            <p>Download the app to import this contact and join the mesh network.</p>
+            <h1 id="fallback-title">Mycel not installed?</h1>
+            <p id="fallback-desc">Download the app to import this contact and join the mesh network.</p>
 
-            <a class="btn" href="/mycel-docs/getting-started/install/">
+            <a class="btn" id="install-btn" href="/mycel-docs/getting-started/install/">
                 Install Mycel
             </a>
             <br>
-            <a class="btn btn-secondary" href="javascript:window.location.href=window.mycelUrl || 'mycel://contact/'">
+            <a class="btn btn-secondary" id="retry-btn" href="javascript:window.location.href=window.mycelUrl || 'mycel://contact/'">
                 Try opening again
             </a>
 
-            <p class="note">
+            <p class="note" id="fallback-note">
                 After installing, come back and tap this link again to import the contact.
             </p>
         </div>
