--- a/static/c/index.html
+++ b/static/c/index.html
@@ -157,10 +157,17 @@
             }
         };
 
-        // Detect language from URL path or browser
+        // Detect language from URL query param, path, or browser
         function detectLang() {
+            // Check query parameter first (for language switcher)
+            const urlParams = new URLSearchParams(window.location.search);
+            const langParam = urlParams.get('lang');
+            if (langParam === 'fa') return 'fa';
+            if (langParam === 'en') return 'en';
+            // Check URL path
             const path = window.location.pathname;
             if (path.includes('/fa/')) return 'fa';
+            // Check browser language
             const browserLang = navigator.language || navigator.userLanguage;
             if (browserLang && browserLang.startsWith('fa')) return 'fa';
             return 'en';
